# PARCIAL_1

./: CMakeLists.txt  MODULO1.cpp  MODULO1.h  MODULO2.cpp  MODULO2.h  MODULOS.h  MODULOS1.h  PROYECTO INFORMATICA 2 (1).docx  main.cpp  ~$OYECTO INFORMATICA 2 (1).docx
